...
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:paddingBottom="4dp"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/left_pokemon_image_view"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/drawable_primary_background"
                app:srcCompat="@drawable/icon_placeholder"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/left_pokemon_configuration_name"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/attack_direction_image_view" />

            <ImageView
                android:id="@+id/right_pokemon_image_view"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/drawable_primary_background"
                app:srcCompat="@drawable/icon_placeholder"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/right_pokemon_configuration_name"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/attack_direction_image_view" />

...
        </android.support.constraint.ConstraintLayout>
        <TextView
            android:id="@+id/empty_opponent_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/damage_calculator_empty_opponent_text"
            android:padding="8dp"
            android:visibility="gone"/>
        <ScrollView
            android:id="@+id/damage_results_frame_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
...
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:text="@string/damage_calculator_damage_result_title" />
                <es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView
                    android:id="@+id/move_0_damage_result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">
                </es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView>
                <es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView
                    android:id="@+id/move_1_damage_result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">
                </es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView>
                <es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView
                    android:id="@+id/move_2_damage_result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">
                </es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView>
                <es.developer.achambi.pkmng.modules.calculator.screen.MoveDamageView
                    android:id="@+id/move_3_damage_result_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
...
