...
    <string name="details_action_button_choose_pokemon">Choose Pokemon</string>
    <string name="details_action_button_choose_item">Choose Item</string>
    <string name="details_action_button_choose_ability">Choose Ability</string>
    <string name="details_action_button_choose_configuration">Choose configuration</string>

    <string name="configuration_created_toast_message">Configuration created</string>
    <string name="configuration_updated_toast_message">Configuration updated</string>
    <string name="configuration_not_changed_toast_message">Configuration not changed</string>
    
    <string name="damage_calculator_damage_result_title">Damage results</string>
    <string name="damage_calculator_empty_opponent_text">Choose an opponent configuration to display the damage result</string>

    <string name="damage_not_available_placeholder">Damage calculation not available for the current move</string>

    <string name="type_normal_text">NORMAL</string>
    <string name="type_fire_text">FIRE</string>
    <string name="type_water_text">WATER</string>
    <string name="type_electric_text">ELECTRIC</string>
    <string name="type_grass_text">GRASS</string>
...
    <string name="type_fairy_text">FAIRY</string>

    <string name="quick_detail_resistant_to_tag">Resistant to: %1$s</string>
    <string name="quick_detail_weak_against_tag">Weak against: %1$s</string>
    <string name="quick_detail_effective_against_tag">Effective against: %1$s</string>

    <string name="move_category_special_tag">Special</string>
    <string name="move_category_physical_tag">Physical</string>
    <string name="name_category_non_damaging_tag">Non-damaging</string>

    <string name="move_power_text_tag">Power</string>
    <string name="move_accuracy_text_tag">Accuracy</string>
    <string name="move_pp_text_tag">PP</string>

    <string name="text_empty_placeholder">-</string>

    <string name="pokemon_level_tag">level</string>
</resources>

