...
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/configuration_floating_save_button_main"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/configuration_floating_save_button_main"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/configuration_floating_save_button_main"
        app:text="Both"
        android:visibility="invisible">
    </es.developer.achambi.pkmng.core.ui.FloatingTextButton>

    <es.developer.achambi.pkmng.core.ui.FloatingTextButton
        android:id="@+id/configuration_floating_save_button_left"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="@+id/configuration_floating_save_button_middle"
...
        android:layout_marginEnd="8dp"
        app:text="Left"
        android:visibility="gone">
    </es.developer.achambi.pkmng.core.ui.FloatingTextButton>

    <es.developer.achambi.pkmng.core.ui.FloatingTextButton
        android:id="@+id/configuration_floating_save_button_right"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal|bottom"
        app:layout_constraintBottom_toBottomOf="@+id/configuration_floating_save_button_middle"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
...
